--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ html:
   use_repository_button: true
   use_issues_button: true
   last_updated_fmt: "%Y-%m-%d"
-  html_context:
-      default_mode: "dark"
+  # html_context:
+      # default_mode: "dark"
   favicon: "logo.png"
 
 
